--- a/index.html
+++ b/index.html
@@ -11,7 +11,31 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+
+    <header>
+      <nav>
+
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <article>
+
+        </article>
+      </section>
+      <ul>
+        <li>Guayas</li>
+      </ul>
+      <ol></ol>
+    </main>
+
+    <footer>
+      
+    </footer>
+
   
   </body>
 </html>
+
 
