HTML Probando etiquetas de texto y encabezados

--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
     </main>
 
     <footer>
-      
+
     </footer>
 
-  
+    <p>Hola mundo</p>
+    <h1>Soy de Guayaquil</h1>
+    <h2>y tú?</h2>
+    <h3>fin</h3>
+    <a href="#">Click aquí</a>
+
   </body>
 </html>
 
