Por buenas prácticas se agregó contenedor figure para manipular las imágenes

--- a/claseImg/index.html
+++ b/claseImg/index.html
@@ -11,7 +11,10 @@
   <main>
 
     <section>
-      <img src="./pictures/imagenesOptimizadas/pequeño.jpg" alt="Pinceles"/>
+      <figure>
+         <img src="./pictures/imagenesOptimizadas/pequeño.jpg" alt="Pinceles"/>
+          <figcaption>Pinceles</figcaption>
+      </figure>
     </section>
   </main>
   
