Se práctica cómo comentar bloques de código

--- a/claseCalendario/index.html
+++ b/claseCalendario/index.html
@@ -7,7 +7,7 @@
   <title>Calendario</title>
 </head>
 <body>
-  <form action="">
+  <!-- <form action="">
     <label for="hora">
       <span>Hora</span>
       <input type="time" id="hora" name="hora"/>
@@ -32,6 +32,6 @@
     <input type="submit"/>
     
 
-  </form>
+  </form> -->
 </body>
 </html>
