Se crea calendario más rápido, pero no personalizado con nuestros requerimientos

--- a/claseCalendario/index.html
+++ b/claseCalendario/index.html
@@ -33,5 +33,16 @@
     
 
   </form> -->
+
+  <form action="">
+    <label for="calendario">
+      <span>Calendario</span>
+      <input type="datetime-local" id="calendario" name="calendario"/>
+    </label>
+
+    <input type="submit"/>
+    
+  </form>
+
 </body>
 </html>
