Se crea formulario incluyendo atributo autocomplete

--- a/claseCalendario/index.html
+++ b/claseCalendario/index.html
@@ -7,6 +7,31 @@
   <title>Calendario</title>
 </head>
 <body>
-  
+  <main>
+    <form action="">
+      <label for="nombre">
+        <span>¿Cuál es tu nombre?</span>
+        <input type="text" name="nombre" id="nombre" autocomplete="name">
+      </label>
+
+      <label for="correo">
+        <span>¿Cuál es tu correo?</span>
+        <input type="email" name="correo" id="correo" autocomplete="email">
+      </label>
+
+      <label for="pais">
+        <span>¿En qué país vives?</span>
+        <input type="text" name="pais" id="pais" autocomplete="country">
+      </label>
+
+      <label for="codigoPostal">
+        <span>¿Cuál es tu código postal?</span>
+        <input type="text" name="codigoPostal" id="codigoPostal" autocomplete="postal-code">
+      </label>
+
+      <input type="submit">
+
+    </form>
+  </main>
 </body>
 </html>
