Se agrega al formulario el atributo required

--- a/claseCalendario/index.html
+++ b/claseCalendario/index.html
@@ -11,22 +11,22 @@
     <form action="">
       <label for="nombre">
         <span>¿Cuál es tu nombre?</span>
-        <input type="text" name="nombre" id="nombre" autocomplete="name">
+        <input type="text" name="nombre" id="nombre" autocomplete="name" required>
       </label>
 
       <label for="correo">
         <span>¿Cuál es tu correo?</span>
-        <input type="email" name="correo" id="correo" autocomplete="email">
+        <input type="email" name="correo" id="correo" autocomplete="email" required>
       </label>
 
       <label for="pais">
         <span>¿En qué país vives?</span>
-        <input type="text" name="pais" id="pais" autocomplete="country">
+        <input type="text" name="pais" id="pais" autocomplete="country" required>
       </label>
 
       <label for="codigoPostal">
         <span>¿Cuál es tu código postal?</span>
-        <input type="text" name="codigoPostal" id="codigoPostal" autocomplete="postal-code">
+        <input type="text" name="codigoPostal" id="codigoPostal" autocomplete="postal-code" required>
       </label>
 
       <input type="submit">
