Se optimiza el select anterior utilizando el input list y datalist

--- a/claseCalendario/select.html
+++ b/claseCalendario/select.html
@@ -8,12 +8,19 @@
 </head>
 <body>
   <main>
-    <select name="cursos" id="">
+    <!-- <select name="cursos" id="">
       <option value="JavaScript">JavaScript</option>
       <option value="HTML5">HTML5</option>
       <option value="CSS3">CSS3</option>
       <option value="Web Standards">Web Standards</option>
-    </select>
+    </select> -->
+    <input list="cursos">
+      <datalist id="cursos">
+        <option value="JavaSript"></option>
+        <option value="HTML5"></option>
+        <option value="CSS3"></option>
+        <option value="Web Standards"></option>
+      </datalist>
   </main>
   
 </body>
