Transformando el código anterior, con buenas prácticas, ahora sin usar id para aplicar los estilos

--- a/claseEspecificidad/index.html
+++ b/claseEspecificidad/index.html
@@ -16,7 +16,7 @@
         <li><a href="">Home</a></li>
         <li><a href="">Quiénes somos</a></li>
         <li><a href="">Multimedia</a></li>
-        <li><a href="" class="Contactos">Contacto</a></li>
+        <li><a href="" class="contactos">Contacto</a></li>
       </ul>
     </nav>
   </header>
