Aplicando combinador hijo y descendiente

--- a/claseCombinadores/index.html
+++ b/claseCombinadores/index.html
@@ -9,13 +9,28 @@
 </head>
 <body>
   <div>
-    <h2>soy un h2</h2>
+    <!-- <h2>soy un h2</h2>
     <p>soy un párrafo</p>
     <h2>soy un h2</h2>
     <h3>soy un h3</h3>
     <p>soy otro párrafo</p>
     <h2>soy un h2</h2>
-    <p>soy el 3er párrafo</p>
+    <p>soy el 3er párrafo</p> -->
+
+    <article>
+      <p>soy un texto</p>
+    </article>
+
+    <article>
+      <p>soy un texto</p>
+    </article>
+
+    <section>
+      <div>
+        <p>soy un texto</p>
+      </div>
+    </section>
+    <p>soy un texto</p>
   </div>
 </body>
 </html>
