--- a/claseResponsiveDesign/mostlyFluid/index.html
+++ b/claseResponsiveDesign/mostlyFluid/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./tablet.css" media="screen and (min-width: 600px)">
+  <link rel="stylesheet" href="./desktop.css" media="screen and (min-width: 800px)">
 </head>
 <body>
   <main class="container">
@@ -13,10 +15,6 @@
     <div class="c3"></div>
     <div class="c4"></div>
     <div class="c5"></div>
-    
-
-  </main>
-  
-  
+   </main>
 </body>
 </html>
